[gd_scene load_steps=19 format=2]

[ext_resource path="res://settings_theme.tres" type="Theme" id=1]
[ext_resource path="res://settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://SoundSetting.tscn" type="PackedScene" id=3]
[ext_resource path="res://Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/sfxs/crunch1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sfxs/crunch2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/sfxs/settings/bw_01_ahab_Settings.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/sfxs/settings/bw_02_ahab_Settings.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/sfxs/settings/bw_03_ahab_Settings.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/fonts/Itim-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/images/buttons/hearts.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.839216, 0.839216, 0.839216, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="DynamicFont" id=5]
size = 27
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 26
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Drop:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VB:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ButtonsContainer/Back:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ButtonsContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "disable"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Drop:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VB:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ButtonsContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "enable"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Drop:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VB:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.34902, 0.247059, 0.247059, 0 ), Color( 0.34902, 0.247059, 0.247059, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ButtonsContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Settings" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.960784 )

[node name="Drop" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 434.0
margin_top = 20.0
margin_right = -446.0
margin_bottom = -20.0
custom_styles/panel = SubResource( 8 )

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
margin_left = 434.0
margin_top = 616.0
margin_right = 834.0
margin_bottom = 666.0
custom_constants/separation = 15
alignment = 1

[node name="Back" parent="ButtonsContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_right = 192.0
margin_bottom = 50.0
text = "BACK"

[node name="SaveQuit" parent="ButtonsContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 207.0
margin_right = 377.0
margin_bottom = 50.0
text = "SAVE_QUIT"

[node name="VB" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -309.0
margin_right = 178.0
margin_bottom = 192.0
alignment = 1

[node name="MasterSound" parent="VB" instance=ExtResource( 3 )]
margin_right = 350.0
margin_bottom = 80.0

[node name="BGMSound" parent="VB" instance=ExtResource( 3 )]
margin_top = 84.0
margin_right = 350.0
margin_bottom = 164.0
bus = 1

[node name="Label" parent="VB/BGMSound/VBoxContainer/Title" index="0"]
margin_left = 81.0
margin_right = 234.0
text = "BGM_VOLUME"

[node name="Icon" parent="VB/BGMSound/VBoxContainer/Title" index="1"]
margin_left = 238.0
margin_right = 268.0

[node name="SFXSound" parent="VB" instance=ExtResource( 3 )]
margin_top = 168.0
margin_right = 350.0
margin_bottom = 248.0
bus = 2
test_sfxs = [ ExtResource( 5 ), ExtResource( 6 ) ]

[node name="Label" parent="VB/SFXSound/VBoxContainer/Title" index="0"]
margin_left = 87.0
margin_right = 228.0
text = "SFX_VOLUME"

[node name="Icon" parent="VB/SFXSound/VBoxContainer/Title" index="1"]
margin_left = 232.0
margin_right = 262.0

[node name="TestSFX" parent="VB/SFXSound" index="1"]
bus = "SFX"

[node name="NarrationSound" parent="VB" instance=ExtResource( 3 )]
margin_top = 252.0
margin_right = 350.0
margin_bottom = 332.0
bus = 3
test_sfxs = [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ]

[node name="Label" parent="VB/NarrationSound/VBoxContainer/Title" index="0"]
margin_left = 42.0
margin_right = 274.0
text = "NARRATION_VOLUME"

[node name="Icon" parent="VB/NarrationSound/VBoxContainer/Title" index="1"]
margin_left = 278.0
margin_right = 308.0

[node name="TestSFX" parent="VB/NarrationSound" index="1"]
bus = "Narration"

[node name="Happiness" parent="VB" instance=ExtResource( 3 )]
margin_top = 336.0
margin_right = 350.0
margin_bottom = 406.0
rect_min_size = Vector2( 350, 70 )
dummy = true

[node name="Label" parent="VB/Happiness/VBoxContainer/Title" index="0"]
margin_left = 96.0
margin_right = 220.0
text = "HAPPINESS"

[node name="Icon" parent="VB/Happiness/VBoxContainer/Title" index="1"]
margin_left = 224.0
margin_right = 254.0
texture = ExtResource( 11 )

[node name="Fullscreen" type="CheckBox" parent="VB"]
margin_top = 410.0
margin_right = 350.0
margin_bottom = 459.0
rect_min_size = Vector2( 0, 49 )
focus_mode = 0
theme = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "FULLSCREEN"
flat = true

[node name="LanguageContainer" type="HBoxContainer" parent="VB"]
margin_top = 463.0
margin_right = 350.0
margin_bottom = 501.0
custom_constants/separation = 18

[node name="Label" type="Label" parent="VB/LanguageContainer"]
margin_right = 152.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="VB/LanguageContainer"]
margin_left = 170.0
margin_right = 328.0
margin_bottom = 38.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 7 )
text = "KEY_NAME"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/disable = SubResource( 4 )
anims/enable = SubResource( 3 )

[connection signal="acted" from="ButtonsContainer/Back" to="." method="_on_Back_acted"]
[connection signal="acted" from="ButtonsContainer/SaveQuit" to="." method="_on_SaveQuit_acted"]
[connection signal="change_value" from="VB/MasterSound" to="." method="_on_Sound_change_value"]
[connection signal="change_value" from="VB/BGMSound" to="." method="_on_Sound_change_value"]
[connection signal="change_value" from="VB/SFXSound" to="." method="_on_Sound_change_value"]
[connection signal="change_value" from="VB/NarrationSound" to="." method="_on_Sound_change_value"]
[connection signal="toggled" from="VB/Fullscreen" to="." method="_on_FullScreen_toggled"]
[connection signal="item_selected" from="VB/LanguageContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]

[editable path="VB/BGMSound"]
[editable path="VB/SFXSound"]
[editable path="VB/NarrationSound"]
[editable path="VB/Happiness"]
